[gd_scene load_steps=7 format=2]

[ext_resource path="res://GroundTile.tscn" type="PackedScene" id=1]
[ext_resource path="res://Pillar.tscn" type="PackedScene" id=2]
[ext_resource path="res://Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://MainCamera.tscn" type="PackedScene" id=4]
[ext_resource path="res://Enemies/Boss1.tscn" type="PackedScene" id=5]
[ext_resource path="res://Levels/BossRoom1.gd" type="Script" id=6]

[node name="BossRoom1" type="Node2D"]
script = ExtResource( 6 )

[node name="GroundTile" parent="." instance=ExtResource( 1 )]
z_index = -5
tile_data = PoolIntArray( -983063, 2, 0, -983062, 2, 0, -983061, 2, 0, -983060, 2, 0, -983059, 2, 0, -983058, 2, 0, -983057, 2, 0, -983056, 2, 0, -983055, 2, 0, -983054, 2, 0, -983053, 2, 0, -983052, 2, 0, -983051, 2, 0, -983050, 2, 0, -983049, 2, 0, -983048, 2, 0, -983047, 2, 0, -983046, 2, 0, -983045, 2, 0, -983044, 2, 0, -983043, 2, 0, -983042, 2, 0, -983041, 2, 0, -1048576, 2, 0, -1048575, 2, 0, -1048574, 2, 0, -1048573, 2, 0, -1048572, 2, 0, -1048571, 2, 0, -1048570, 2, 0, -1048569, 2, 0, -1048568, 2, 0, -1048567, 2, 0, -1048566, 2, 0, -1048565, 2, 0, -1048564, 2, 0, -1048563, 2, 0, -1048562, 2, 0, -1048561, 2, 0, -1048560, 2, 0, -1048559, 2, 0, -1048558, 2, 0, -1048557, 2, 0, -1048556, 2, 0, -1048555, 2, 0, -1048554, 2, 0, -1048553, 2, 0, -1048552, 2, 0, -1048551, 2, 0, -1048550, 2, 0, -917527, 2, 0, -917526, 0, 0, -917525, 0, 0, -917524, 0, 0, -917523, 0, 0, -917522, 0, 0, -917521, 0, 0, -917520, 0, 0, -917519, 0, 0, -917518, 0, 0, -917517, 0, 0, -917516, 0, 0, -917515, 0, 0, -917514, 0, 0, -917513, 0, 0, -917512, 0, 0, -917511, 0, 0, -917510, 0, 0, -917509, 0, 0, -917508, 0, 0, -917507, 0, 0, -917506, 0, 0, -917505, 0, 0, -983040, 0, 0, -983039, 0, 0, -983038, 0, 0, -983037, 0, 0, -983036, 0, 0, -983035, 0, 0, -983034, 0, 0, -983033, 0, 0, -983032, 0, 0, -983031, 0, 0, -983030, 0, 0, -983029, 0, 0, -983028, 0, 0, -983027, 0, 0, -983026, 0, 0, -983025, 0, 0, -983024, 0, 0, -983023, 0, 0, -983022, 0, 0, -983021, 0, 0, -983020, 0, 0, -983019, 0, 0, -983018, 0, 0, -983017, 0, 0, -983016, 0, 0, -983015, 0, 0, -983014, 2, 0, -851991, 2, 0, -851990, 0, 0, -851989, 0, 65538, -851988, 0, 1, -851987, 0, 65536, -851986, 0, 65536, -851985, 0, 65537, -851984, 0, 65537, -851983, 0, 2, -851982, 0, 1, -851981, 0, 65537, -851980, 0, 1, -851979, 0, 2, -851978, 0, 2, -851977, 0, 0, -851976, 0, 65538, -851975, 0, 0, -851974, 0, 65538, -851973, 0, 0, -851972, 0, 65537, -851971, 0, 65538, -851970, 0, 2, -851969, 0, 0, -917504, 0, 2, -917503, 0, 1, -917502, 0, 0, -917501, 0, 0, -917500, 0, 65538, -917499, 0, 65536, -917498, 0, 65538, -917497, 0, 0, -917496, 0, 1, -917495, 0, 65538, -917494, 0, 65537, -917493, 0, 65538, -917492, 0, 65537, -917491, 0, 65536, -917490, 0, 65536, -917489, 0, 65536, -917488, 0, 2, -917487, 0, 1, -917486, 0, 65537, -917485, 0, 65538, -917484, 0, 65537, -917483, 0, 65536, -917482, 0, 65537, -917481, 0, 2, -917480, 0, 65537, -917479, 0, 0, -917478, 2, 0, -786455, 2, 0, -786454, 0, 0, -786453, 0, 1, -786452, 0, 2, -786451, 0, 1, -786450, 0, 0, -786449, 0, 65536, -786448, 0, 65537, -786447, 0, 65538, -786446, 0, 65536, -786445, 0, 2, -786444, 0, 65536, -786443, 0, 2, -786442, 0, 2, -786441, 0, 65538, -786440, 0, 2, -786439, 0, 0, -786438, 0, 0, -786437, 0, 1, -786436, 0, 65536, -786435, 0, 65536, -786434, 0, 65538, -786433, 0, 65536, -851968, 0, 0, -851967, 0, 65536, -851966, 0, 65536, -851965, 0, 65536, -851964, 0, 2, -851963, 0, 65537, -851962, 0, 2, -851961, 0, 1, -851960, 0, 0, -851959, 0, 0, -851958, 0, 65537, -851957, 0, 65537, -851956, 0, 1, -851955, 0, 65537, -851954, 0, 0, -851953, 0, 0, -851952, 0, 0, -851951, 0, 65537, -851950, 0, 2, -851949, 0, 65537, -851948, 0, 65537, -851947, 0, 0, -851946, 0, 0, -851945, 0, 65536, -851944, 0, 2, -851943, 0, 0, -851942, 2, 0, -720919, 2, 0, -720918, 0, 0, -720917, 0, 65538, -720916, 0, 2, -720915, 0, 65536, -720914, 0, 0, -720913, 0, 1, -720912, 0, 65537, -720911, 0, 65536, -720910, 0, 65538, -720909, 0, 65537, -720908, 0, 1, -720907, 0, 0, -720906, 0, 65536, -720905, 0, 0, -720904, 0, 65537, -720903, 0, 2, -720902, 0, 2, -720901, 0, 1, -720900, 0, 65537, -720899, 0, 65537, -720898, 0, 65536, -720897, 0, 2, -786432, 0, 1, -786431, 0, 2, -786430, 0, 0, -786429, 0, 0, -786428, 0, 65538, -786427, 0, 1, -786426, 0, 1, -786425, 0, 1, -786424, 0, 65538, -786423, 0, 65538, -786422, 0, 65538, -786421, 0, 65537, -786420, 0, 2, -786419, 0, 0, -786418, 0, 0, -786417, 2, 0, -786416, 0, 0, -786415, 0, 1, -786414, 0, 1, -786413, 0, 65538, -786412, 0, 65537, -786411, 0, 65536, -786410, 0, 0, -786409, 0, 0, -786408, 0, 1, -786407, 0, 0, -786406, 2, 0, -655383, 2, 0, -655382, 0, 0, -655381, 0, 65538, -655380, 0, 2, -655379, 0, 0, -655378, 0, 65536, -655377, 0, 65536, -655376, 0, 2, -655375, 0, 65536, -655374, 0, 65536, -655373, 0, 0, -655372, 0, 0, -655371, 0, 0, -655370, 0, 0, -655369, 0, 0, -655368, 0, 0, -655367, 0, 0, -655366, 0, 0, -655365, 0, 0, -655364, 0, 0, -655363, 0, 0, -655362, 0, 0, -655361, 0, 0, -720896, 0, 0, -720895, 0, 0, -720894, 0, 0, -720893, 0, 0, -720892, 0, 0, -720891, 0, 65538, -720890, 0, 1, -720889, 0, 65538, -720888, 0, 65538, -720887, 0, 0, -720886, 0, 2, -720885, 0, 2, -720884, 0, 2, -720883, 0, 0, -720882, 2, 0, -720881, 2, 0, -720880, 0, 0, -720879, 0, 1, -720878, 0, 2, -720877, 0, 65538, -720876, 0, 65536, -720875, 0, 65538, -720874, 0, 65537, -720873, 0, 65538, -720872, 0, 0, -720871, 0, 0, -720870, 2, 0, -589847, 2, 0, -589846, 0, 0, -589845, 0, 65536, -589844, 0, 65537, -589843, 0, 1, -589842, 0, 2, -589841, 0, 65537, -589840, 0, 65538, -589839, 0, 0, -589838, 0, 0, -589837, 0, 0, -589836, 2, 0, -589835, 2, 0, -589834, 2, 0, -589833, 2, 0, -589832, 2, 0, -589831, 2, 0, -589830, 2, 0, -589829, 2, 0, -589828, 2, 0, -589827, 2, 0, -589826, 2, 0, -589825, 2, 0, -655360, 2, 0, -655359, 2, 0, -655358, 2, 0, -655357, 2, 0, -655356, 0, 0, -655355, 0, 65536, -655354, 0, 0, -655353, 0, 2, -655352, 0, 65536, -655351, 0, 2, -655350, 0, 65538, -655349, 0, 65536, -655348, 0, 1, -655347, 0, 0, -655346, 0, 0, -655345, 2, 0, -655344, 0, 0, -655343, 0, 0, -655342, 0, 65538, -655341, 0, 2, -655340, 0, 2, -655339, 0, 1, -655338, 0, 0, -655337, 0, 65538, -655336, 0, 0, -655335, 0, 0, -655334, 2, 0, -524311, 2, 0, -524310, 0, 0, -524309, 0, 2, -524308, 0, 65538, -524307, 0, 2, -524306, 0, 65537, -524305, 0, 1, -524304, 0, 0, -524303, 0, 0, -524302, 2, 0, -524301, 2, 0, -524300, 2, 0, -524299, 0, 0, -524298, 0, 0, -524297, 0, 0, -524296, 0, 0, -524295, 0, 0, -524294, 0, 0, -524293, 0, 0, -524292, 0, 0, -524291, 0, 0, -524290, 0, 0, -524289, 0, 0, -589824, 0, 0, -589823, 0, 0, -589822, 0, 0, -589821, 0, 0, -589820, 0, 0, -589819, 0, 65537, -589818, 0, 65537, -589817, 0, 0, -589816, 0, 0, -589815, 0, 0, -589814, 0, 0, -589813, 0, 65538, -589812, 0, 65538, -589811, 0, 65537, -589810, 0, 0, -589809, 2, 0, -589808, 2, 0, -589807, 0, 0, -589806, 0, 65536, -589805, 0, 0, -589804, 0, 65536, -589803, 0, 2, -589802, 0, 2, -589801, 0, 0, -589800, 0, 0, -589799, 0, 0, -589798, 2, 0, -458775, 2, 0, -458774, 0, 0, -458773, 0, 65537, -458772, 0, 1, -458771, 0, 65538, -458770, 0, 2, -458769, 0, 0, -458768, 0, 0, -458767, 2, 0, -458766, 2, 0, -458765, 0, 0, -458764, 0, 0, -458763, 0, 0, -458762, 2, 0, -458761, 2, 0, -458760, 2, 0, -458759, 2, 0, -458758, 2, 0, -458757, 2, 0, -458756, 2, 0, -458755, 2, 0, -458754, 2, 0, -458753, 2, 0, -524288, 2, 0, -524287, 2, 0, -524286, 2, 0, -524285, 0, 0, -524284, 0, 0, -524283, 0, 0, -524282, 0, 0, -524281, 0, 0, -524280, 0, 0, -524279, 0, 0, -524278, 0, 0, -524277, 0, 0, -524276, 0, 0, -524275, 0, 0, -524274, 0, 0, -524273, 0, 0, -524272, 0, 0, -524271, 0, 0, -524270, 0, 1, -524269, 0, 65538, -524268, 0, 2, -524267, 0, 2, -524266, 0, 0, -524265, 0, 65536, -524264, 0, 2, -524263, 0, 0, -524262, 2, 0, -393239, 2, 0, -393238, 0, 0, -393237, 0, 65538, -393236, 0, 0, -393235, 0, 0, -393234, 0, 2, -393233, 0, 0, -393232, 2, 0, -393231, 0, 0, -393230, 0, 0, -393229, 2, 0, -393228, 2, 0, -393227, 2, 0, -393226, 0, 0, -393225, 0, 0, -393224, 0, 0, -393223, 0, 0, -393222, 0, 0, -393221, 0, 0, -393220, 0, 0, -393219, 0, 0, -393218, 2, 0, -393217, 0, 0, -458752, 0, 0, -458751, 0, 0, -458750, 0, 0, -458749, 2, 0, -458748, 2, 0, -458747, 2, 0, -458746, 2, 0, -458745, 2, 0, -458744, 2, 0, -458743, 2, 0, -458742, 2, 0, -458741, 2, 0, -458740, 2, 0, -458739, 2, 0, -458738, 2, 0, -458737, 2, 0, -458736, 0, 0, -458735, 0, 1, -458734, 0, 65538, -458733, 0, 0, -458732, 0, 65536, -458731, 0, 2, -458730, 0, 0, -458729, 0, 65536, -458728, 0, 65538, -458727, 0, 0, -458726, 2, 0, -327703, 2, 0, -327702, 0, 0, -327701, 0, 0, -327700, 0, 1, -327699, 0, 65538, -327698, 0, 0, -327697, 0, 0, -327696, 2, 0, -327695, 0, 0, -327694, 2, 0, -327693, 2, 0, -327692, 2, 0, -327691, 0, 0, -327690, 0, 0, -327689, 0, 65537, -327688, 0, 65537, -327687, 0, 65537, -327686, 0, 0, -327685, 0, 0, -327684, 0, 1, -327683, 0, 0, -327682, 2, 0, -327681, 0, 0, -393216, 0, 65536, -393215, 0, 2, -393214, 0, 0, -393213, 0, 0, -393212, 0, 0, -393211, 0, 0, -393210, 0, 0, -393209, 0, 0, -393208, 0, 0, -393207, 0, 0, -393206, 0, 0, -393205, 0, 0, -393204, 2, 0, -393203, 2, 0, -393202, 0, 0, -393201, 2, 0, -393200, 0, 0, -393199, 0, 1, -393198, 0, 1, -393197, 0, 1, -393196, 0, 2, -393195, 0, 1, -393194, 0, 2, -393193, 0, 0, -393192, 0, 1, -393191, 0, 0, -393190, 2, 0, -262167, 2, 0, -262166, 0, 0, -262165, 0, 65538, -262164, 0, 0, -262163, 0, 65537, -262162, 0, 0, -262161, 2, 0, -262160, 0, 0, -262159, 0, 0, -262158, 2, 0, -262157, 2, 0, -262156, 0, 0, -262155, 0, 0, -262154, 0, 1, -262153, 0, 65538, -262152, 0, 65536, -262151, 0, 2, -262150, 0, 65536, -262149, 0, 0, -262148, 0, 2, -262147, 0, 0, -262146, 0, 0, -262145, 0, 0, -327680, 0, 0, -327679, 0, 0, -327678, 0, 0, -327677, 0, 1, -327676, 0, 65536, -327675, 0, 0, -327674, 0, 0, -327673, 0, 0, -327672, 0, 65537, -327671, 0, 1, -327670, 0, 0, -327669, 2, 0, -327668, 0, 0, -327667, 2, 0, -327666, 0, 0, -327665, 2, 0, -327664, 0, 0, -327663, 0, 1, -327662, 0, 65537, -327661, 0, 65537, -327660, 0, 65536, -327659, 0, 1, -327658, 0, 65537, -327657, 0, 65538, -327656, 0, 2, -327655, 0, 0, -327654, 2, 0, -196631, 2, 0, -196630, 0, 0, -196629, 0, 2, -196628, 0, 65537, -196627, 0, 65537, -196626, 0, 0, -196625, 2, 0, -196624, 0, 0, -196623, 0, 0, -196622, 2, 0, -196621, 0, 0, -196620, 0, 0, -196619, 0, 65537, -196618, 0, 0, -196617, 0, 0, -196616, 0, 0, -196615, 0, 65537, -196614, 0, 65537, -196613, 0, 0, -196612, 0, 2, -196611, 0, 65538, -196610, 0, 0, -196609, 2, 0, -262144, 2, 0, -262143, 2, 0, -262142, 0, 0, -262141, 0, 65538, -262140, 0, 65538, -262139, 0, 0, -262138, 2, 0, -262137, 0, 0, -262136, 0, 65536, -262135, 0, 65538, -262134, 0, 0, -262133, 2, 0, -262132, 0, 0, -262131, 2, 0, -262130, 0, 0, -262129, 2, 0, -262128, 0, 0, -262127, 0, 2, -262126, 0, 0, -262125, 0, 65537, -262124, 0, 65536, -262123, 0, 2, -262122, 0, 1, -262121, 0, 65537, -262120, 0, 1, -262119, 0, 0, -262118, 2, 0, -131095, 2, 0, -131094, 0, 0, -131093, 0, 0, -131092, 0, 65538, -131091, 0, 0, -131090, 0, 0, -131089, 2, 0, -131088, 0, 0, -131087, 0, 0, -131086, 2, 0, -131085, 2, 0, -131084, 0, 0, -131083, 0, 65537, -131082, 0, 0, -131081, 2, 0, -131080, 0, 0, -131079, 0, 0, -131078, 0, 0, -131077, 0, 0, -131076, 0, 1, -131075, 0, 2, -131074, 0, 0, -131073, 0, 0, -196608, 0, 0, -196607, 0, 0, -196606, 0, 0, -196605, 0, 0, -196604, 0, 0, -196603, 0, 0, -196602, 0, 0, -196601, 0, 0, -196600, 0, 65538, -196599, 0, 2, -196598, 0, 0, -196597, 2, 0, -196596, 0, 0, -196595, 0, 0, -196594, 2, 0, -196593, 2, 0, -196592, 0, 0, -196591, 0, 2, -196590, 0, 2, -196589, 0, 65538, -196588, 0, 65537, -196587, 0, 2, -196586, 0, 0, -196585, 0, 0, -196584, 0, 2, -196583, 0, 0, -196582, 2, 0, -65559, 2, 0, -65558, 0, 0, -65557, 0, 65537, -65556, 0, 65537, -65555, 0, 1, -65554, 0, 0, -65553, 2, 0, -65552, 0, 0, -65551, 0, 0, -65550, 0, 0, -65549, 2, 0, -65548, 0, 0, -65547, 0, 0, -65546, 0, 0, -65545, 0, 0, -65544, 0, 0, -65543, 0, 0, -65542, 2, 0, -65541, 0, 0, -65540, 0, 65537, -65539, 0, 0, -65538, 0, 1, -65537, 0, 65537, -131072, 0, 0, -131071, 0, 0, -131070, 0, 2, -131069, 0, 1, -131068, 0, 1, -131067, 0, 0, -131066, 0, 0, -131065, 0, 0, -131064, 0, 0, -131063, 0, 65538, -131062, 0, 0, -131061, 2, 0, -131060, 0, 0, -131059, 0, 0, -131058, 2, 0, -131057, 2, 0, -131056, 0, 0, -131055, 0, 65537, -131054, 0, 1, -131053, 0, 0, -131052, 0, 65536, -131051, 0, 65538, -131050, 0, 2, -131049, 0, 65537, -131048, 0, 65536, -131047, 0, 0, -131046, 2, 0, -23, 2, 0, -22, 0, 0, -21, 0, 2, -20, 0, 65537, -19, 0, 0, -18, 0, 0, -17, 2, 0, -16, 0, 0, -15, 0, 0, -14, 0, 0, -13, 2, 0, -12, 0, 0, -11, 2, 0, -10, 0, 0, -9, 0, 65536, -8, 0, 0, -7, 0, 0, -6, 0, 0, -5, 0, 0, -4, 0, 0, -3, 0, 65538, -2, 0, 65536, -1, 0, 65537, -65536, 0, 65537, -65535, 0, 65538, -65534, 0, 1, -65533, 0, 1, -65532, 0, 0, -65531, 0, 0, -65530, 2, 0, -65529, 2, 0, -65528, 0, 0, -65527, 0, 65537, -65526, 0, 0, -65525, 2, 0, -65524, 0, 0, -65523, 0, 0, -65522, 2, 0, -65521, 2, 0, -65520, 0, 0, -65519, 0, 65536, -65518, 0, 65537, -65517, 0, 65536, -65516, 0, 0, -65515, 0, 65538, -65514, 0, 1, -65513, 0, 65537, -65512, 0, 0, -65511, 0, 0, -65510, 2, 0, 65513, 2, 0, 65514, 0, 0, 65515, 0, 65537, 65516, 0, 65537, 65517, 0, 65536, 65518, 0, 0, 65519, 2, 0, 65520, 0, 0, 65521, 0, 0, 65522, 0, 0, 65523, 2, 0, 65524, 2, 0, 65525, 2, 0, 65526, 0, 0, 65527, 0, 2, 65528, 0, 0, 65529, 0, 0, 65530, 2, 0, 65531, 0, 0, 65532, 0, 65536, 65533, 0, 0, 65534, 0, 65538, 65535, 0, 2, 0, 0, 65537, 1, 0, 2, 2, 0, 65536, 3, 0, 65537, 4, 0, 65537, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 2, 10, 0, 0, 11, 2, 0, 12, 0, 0, 13, 0, 0, 14, 2, 0, 15, 2, 0, 16, 0, 0, 17, 0, 0, 18, 0, 65536, 19, 0, 65536, 20, 0, 65537, 21, 0, 1, 22, 0, 65537, 23, 0, 1, 24, 0, 2, 25, 0, 0, 26, 2, 0, 131049, 2, 0, 131050, 0, 0, 131051, 0, 2, 131052, 0, 65537, 131053, 0, 2, 131054, 0, 0, 131055, 2, 0, 131056, 0, 0, 131057, 0, 0, 131058, 2, 0, 131059, 2, 0, 131060, 2, 0, 131061, 2, 0, 131062, 0, 0, 131063, 0, 0, 131064, 0, 0, 131065, 0, 0, 131066, 0, 0, 131067, 0, 0, 131068, 0, 2, 131069, 0, 65537, 131070, 0, 0, 131071, 0, 1, 65536, 0, 1, 65537, 0, 65537, 65538, 0, 2, 65539, 0, 2, 65540, 0, 0, 65541, 0, 0, 65542, 0, 65537, 65543, 0, 0, 65544, 0, 65537, 65545, 0, 65537, 65546, 0, 0, 65547, 2, 0, 65548, 0, 0, 65549, 0, 0, 65550, 0, 0, 65551, 0, 0, 65552, 0, 0, 65553, 0, 65537, 65554, 0, 2, 65555, 0, 65538, 65556, 0, 65536, 65557, 0, 0, 65558, 0, 65537, 65559, 0, 1, 65560, 0, 65538, 65561, 0, 0, 65562, 2, 0, 196585, 2, 0, 196586, 0, 0, 196587, 0, 0, 196588, 0, 0, 196589, 0, 0, 196590, 0, 0, 196591, 2, 0, 196592, 0, 0, 196593, 0, 0, 196594, 2, 0, 196595, 2, 0, 196596, 2, 0, 196597, 2, 0, 196598, 0, 0, 196599, 0, 0, 196600, 0, 0, 196601, 0, 0, 196602, 0, 1, 196603, 0, 65537, 196604, 0, 1, 196605, 0, 65537, 196606, 0, 65537, 196607, 0, 2, 131072, 0, 0, 131073, 0, 0, 131074, 0, 0, 131075, 0, 65536, 131076, 0, 1, 131077, 0, 65537, 131078, 0, 65537, 131079, 0, 0, 131080, 0, 0, 131081, 0, 0, 131082, 0, 0, 131083, 2, 0, 131084, 0, 0, 131085, 0, 1, 131086, 0, 1, 131087, 0, 65538, 131088, 0, 2, 131089, 0, 65538, 131090, 0, 65538, 131091, 0, 2, 131092, 0, 65538, 131093, 0, 65538, 131094, 0, 65537, 131095, 0, 0, 131096, 0, 0, 131097, 0, 0, 131098, 2, 0, 262121, 2, 0, 262122, 0, 0, 262123, 0, 0, 262124, 0, 0, 262125, 0, 0, 262126, 0, 0, 262127, 2, 0, 262128, 0, 0, 262129, 0, 0, 262130, 2, 0, 262131, 0, 0, 262132, 2, 0, 262133, 2, 0, 262134, 0, 0, 262135, 0, 0, 262136, 2, 0, 262137, 0, 0, 262138, 0, 0, 262139, 0, 65537, 262140, 0, 0, 262141, 0, 0, 262142, 0, 65537, 262143, 0, 65538, 196608, 0, 0, 196609, 2, 0, 196610, 0, 0, 196611, 0, 65538, 196612, 0, 1, 196613, 0, 65536, 196614, 0, 0, 196615, 0, 0, 196616, 2, 0, 196617, 0, 0, 196618, 0, 0, 196619, 2, 0, 196620, 0, 0, 196621, 0, 65536, 196622, 0, 2, 196623, 0, 65537, 196624, 0, 65537, 196625, 0, 65537, 196626, 0, 1, 196627, 0, 1, 196628, 0, 1, 196629, 0, 0, 196630, 0, 1, 196631, 0, 65538, 196632, 0, 65537, 196633, 0, 0, 196634, 2, 0, 327657, 2, 0, 327658, 0, 0, 327659, 0, 65538, 327660, 0, 2, 327661, 0, 0, 327662, 0, 0, 327663, 2, 0, 327664, 0, 0, 327665, 2, 0, 327666, 0, 0, 327667, 0, 0, 327668, 2, 0, 327669, 2, 0, 327670, 0, 0, 327671, 0, 0, 327672, 0, 0, 327673, 0, 0, 327674, 0, 1, 327675, 0, 0, 327676, 0, 0, 327677, 0, 0, 327678, 0, 0, 327679, 0, 2, 262144, 0, 0, 262145, 0, 0, 262146, 0, 0, 262147, 0, 1, 262148, 0, 0, 262149, 0, 0, 262150, 0, 0, 262151, 2, 0, 262152, 0, 0, 262153, 0, 0, 262154, 0, 0, 262155, 2, 0, 262156, 0, 0, 262157, 0, 1, 262158, 0, 65537, 262159, 0, 0, 262160, 0, 0, 262161, 0, 0, 262162, 0, 0, 262163, 0, 0, 262164, 0, 65538, 262165, 0, 2, 262166, 0, 0, 262167, 0, 2, 262168, 0, 1, 262169, 0, 0, 262170, 2, 0, 393193, 2, 0, 393194, 0, 0, 393195, 0, 0, 393196, 0, 1, 393197, 0, 0, 393198, 0, 0, 393199, 2, 0, 393200, 0, 0, 393201, 2, 0, 393202, 0, 0, 393203, 0, 0, 393204, 2, 0, 393205, 2, 0, 393206, 0, 0, 393207, 0, 2, 393208, 0, 65537, 393209, 0, 2, 393210, 0, 65538, 393211, 0, 0, 393212, 2, 0, 393213, 0, 0, 393214, 0, 65536, 393215, 0, 1, 327680, 0, 1, 327681, 0, 0, 327682, 0, 1, 327683, 0, 0, 327684, 0, 0, 327685, 2, 0, 327686, 2, 0, 327687, 2, 0, 327688, 0, 0, 327689, 0, 0, 327690, 0, 0, 327691, 2, 0, 327692, 0, 0, 327693, 0, 65538, 327694, 0, 1, 327695, 0, 0, 327696, 2, 0, 327697, 2, 0, 327698, 0, 0, 327699, 0, 0, 327700, 0, 1, 327701, 0, 65536, 327702, 0, 65537, 327703, 0, 2, 327704, 0, 2, 327705, 0, 0, 327706, 2, 0, 458729, 2, 0, 458730, 0, 0, 458731, 0, 2, 458732, 0, 2, 458733, 0, 1, 458734, 0, 0, 458735, 2, 0, 458736, 0, 0, 458737, 2, 0, 458738, 0, 0, 458739, 0, 0, 458740, 2, 0, 458741, 0, 0, 458742, 0, 0, 458743, 0, 65538, 458744, 0, 1, 458745, 0, 1, 458746, 0, 1, 458747, 0, 0, 458748, 0, 0, 458749, 0, 0, 458750, 0, 0, 458751, 0, 2, 393216, 0, 0, 393217, 0, 65538, 393218, 0, 65536, 393219, 0, 0, 393220, 2, 0, 393221, 2, 0, 393222, 0, 0, 393223, 2, 0, 393224, 0, 0, 393225, 0, 0, 393226, 0, 0, 393227, 2, 0, 393228, 0, 0, 393229, 0, 2, 393230, 0, 0, 393231, 0, 0, 393232, 2, 0, 393233, 2, 0, 393234, 0, 0, 393235, 0, 65537, 393236, 0, 0, 393237, 0, 65538, 393238, 0, 65538, 393239, 0, 65537, 393240, 0, 1, 393241, 0, 0, 393242, 2, 0, 524265, 2, 0, 524266, 0, 0, 524267, 0, 65537, 524268, 0, 0, 524269, 0, 2, 524270, 0, 0, 524271, 2, 0, 524272, 0, 0, 524273, 2, 0, 524274, 2, 0, 524275, 0, 0, 524276, 0, 0, 524277, 0, 0, 524278, 0, 0, 524279, 0, 0, 524280, 0, 0, 524281, 0, 0, 524282, 0, 0, 524283, 0, 0, 524284, 2, 0, 524285, 0, 0, 524286, 0, 65536, 524287, 0, 0, 458752, 0, 0, 458753, 0, 0, 458754, 0, 0, 458755, 0, 0, 458756, 0, 0, 458757, 0, 0, 458758, 0, 0, 458759, 2, 0, 458760, 2, 0, 458761, 2, 0, 458762, 0, 0, 458763, 2, 0, 458764, 0, 0, 458765, 0, 0, 458766, 0, 0, 458767, 2, 0, 458768, 2, 0, 458769, 2, 0, 458770, 0, 0, 458771, 0, 2, 458772, 0, 1, 458773, 0, 1, 458774, 0, 65536, 458775, 0, 2, 458776, 0, 65536, 458777, 0, 0, 458778, 2, 0, 589801, 2, 0, 589802, 0, 0, 589803, 0, 65538, 589804, 0, 65538, 589805, 0, 2, 589806, 0, 0, 589807, 0, 0, 589808, 2, 0, 589809, 0, 0, 589810, 2, 0, 589811, 2, 0, 589812, 2, 0, 589813, 0, 0, 589814, 0, 0, 589815, 2, 0, 589816, 2, 0, 589817, 2, 0, 589818, 0, 0, 589819, 0, 0, 589820, 0, 0, 589821, 0, 0, 589822, 0, 0, 589823, 0, 0, 524288, 2, 0, 524289, 0, 0, 524290, 0, 0, 524291, 0, 0, 524292, 0, 0, 524293, 0, 0, 524294, 0, 0, 524295, 2, 0, 524296, 2, 0, 524297, 2, 0, 524298, 2, 0, 524299, 0, 0, 524300, 0, 0, 524301, 0, 0, 524302, 2, 0, 524303, 2, 0, 524304, 2, 0, 524305, 0, 0, 524306, 0, 0, 524307, 0, 2, 524308, 0, 65538, 524309, 0, 65536, 524310, 0, 2, 524311, 0, 1, 524312, 0, 0, 524313, 0, 0, 524314, 2, 0, 655337, 2, 0, 655338, 0, 0, 655339, 0, 65536, 655340, 0, 0, 655341, 0, 2, 655342, 0, 65536, 655343, 0, 0, 655344, 2, 0, 655345, 0, 0, 655346, 0, 0, 655347, 0, 0, 655348, 0, 0, 655349, 2, 0, 655350, 2, 0, 655351, 2, 0, 655352, 2, 0, 655353, 0, 0, 655354, 2, 0, 655355, 2, 0, 655356, 2, 0, 655357, 2, 0, 655358, 2, 0, 655359, 2, 0, 589824, 2, 0, 589825, 2, 0, 589826, 2, 0, 589827, 2, 0, 589828, 2, 0, 589829, 2, 0, 589830, 2, 0, 589831, 2, 0, 589832, 2, 0, 589833, 2, 0, 589834, 0, 0, 589835, 0, 0, 589836, 0, 0, 589837, 2, 0, 589838, 2, 0, 589839, 2, 0, 589840, 0, 0, 589841, 0, 0, 589842, 0, 2, 589843, 0, 0, 589844, 0, 2, 589845, 0, 65537, 589846, 0, 65537, 589847, 0, 65537, 589848, 0, 0, 589849, 0, 0, 589850, 2, 0, 720873, 2, 0, 720874, 0, 0, 720875, 0, 0, 720876, 0, 2, 720877, 0, 65536, 720878, 0, 65537, 720879, 0, 0, 720880, 0, 0, 720881, 2, 0, 720882, 0, 0, 720883, 0, 65538, 720884, 0, 0, 720885, 0, 0, 720886, 0, 0, 720887, 0, 0, 720888, 0, 0, 720889, 2, 0, 720890, 2, 0, 720891, 2, 0, 720892, 2, 0, 720893, 2, 0, 720894, 2, 0, 720895, 2, 0, 655360, 2, 0, 655361, 2, 0, 655362, 2, 0, 655363, 2, 0, 655364, 2, 0, 655365, 2, 0, 655366, 2, 0, 655367, 2, 0, 655368, 2, 0, 655369, 0, 0, 655370, 2, 0, 655371, 2, 0, 655372, 2, 0, 655373, 2, 0, 655374, 0, 0, 655375, 0, 0, 655376, 0, 0, 655377, 0, 0, 655378, 0, 65536, 655379, 0, 65537, 655380, 0, 1, 655381, 0, 1, 655382, 0, 65536, 655383, 0, 65538, 655384, 0, 1, 655385, 0, 0, 655386, 2, 0, 786409, 2, 0, 786410, 0, 0, 786411, 0, 65538, 786412, 0, 65536, 786413, 0, 65538, 786414, 0, 1, 786415, 0, 65536, 786416, 0, 0, 786417, 2, 0, 786418, 0, 0, 786419, 0, 0, 786420, 0, 65537, 786421, 0, 0, 786422, 0, 1, 786423, 0, 65538, 786424, 0, 0, 786425, 0, 0, 786426, 0, 0, 786427, 0, 0, 786428, 0, 0, 786429, 0, 0, 786430, 0, 0, 786431, 0, 0, 720896, 0, 0, 720897, 0, 0, 720898, 2, 0, 720899, 2, 0, 720900, 2, 0, 720901, 2, 0, 720902, 2, 0, 720903, 2, 0, 720904, 2, 0, 720905, 2, 0, 720906, 2, 0, 720907, 2, 0, 720908, 2, 0, 720909, 2, 0, 720910, 2, 0, 720911, 2, 0, 720912, 2, 0, 720913, 0, 0, 720914, 0, 65537, 720915, 0, 65538, 720916, 0, 1, 720917, 0, 65537, 720918, 0, 1, 720919, 0, 0, 720920, 0, 65537, 720921, 0, 0, 720922, 2, 0, 851945, 2, 0, 851946, 0, 0, 851947, 0, 0, 851948, 0, 65537, 851949, 0, 1, 851950, 0, 0, 851951, 0, 65536, 851952, 0, 0, 851953, 0, 0, 851954, 2, 0, 851955, 0, 0, 851956, 0, 0, 851957, 0, 0, 851958, 0, 0, 851959, 0, 0, 851960, 0, 0, 851961, 0, 0, 851962, 0, 65538, 851963, 0, 65537, 851964, 0, 65537, 851965, 0, 65538, 851966, 0, 65538, 851967, 0, 1, 786432, 0, 0, 786433, 0, 0, 786434, 0, 0, 786435, 0, 0, 786436, 0, 0, 786437, 0, 0, 786438, 0, 0, 786439, 0, 0, 786440, 0, 0, 786441, 0, 0, 786442, 2, 0, 786443, 2, 0, 786444, 2, 0, 786445, 2, 0, 786446, 2, 0, 786447, 2, 0, 786448, 0, 0, 786449, 0, 0, 786450, 0, 65536, 786451, 0, 0, 786452, 0, 65538, 786453, 0, 0, 786454, 0, 65537, 786455, 0, 65536, 786456, 0, 65537, 786457, 0, 0, 786458, 2, 0, 917481, 2, 0, 917482, 0, 0, 917483, 0, 2, 917484, 0, 65537, 917485, 0, 65537, 917486, 0, 65538, 917487, 0, 65536, 917488, 0, 2, 917489, 0, 0, 917490, 0, 0, 917491, 2, 0, 917492, 2, 0, 917493, 2, 0, 917494, 2, 0, 917495, 2, 0, 917496, 2, 0, 917497, 0, 0, 917498, 0, 0, 917499, 0, 0, 917500, 0, 0, 917501, 0, 0, 917502, 0, 0, 917503, 0, 0, 851968, 0, 0, 851969, 2, 0, 851970, 2, 0, 851971, 2, 0, 851972, 2, 0, 851973, 2, 0, 851974, 2, 0, 851975, 2, 0, 851976, 2, 0, 851977, 2, 0, 851978, 0, 0, 851979, 0, 0, 851980, 0, 0, 851981, 0, 0, 851982, 0, 0, 851983, 0, 0, 851984, 0, 0, 851985, 0, 65538, 851986, 0, 65536, 851987, 0, 65536, 851988, 0, 65538, 851989, 0, 65538, 851990, 0, 65537, 851991, 0, 0, 851992, 0, 2, 851993, 0, 0, 851994, 2, 0, 983017, 2, 0, 983018, 0, 0, 983019, 0, 65536, 983020, 0, 65537, 983021, 0, 65536, 983022, 0, 65538, 983023, 0, 2, 983024, 0, 65538, 983025, 0, 65536, 983026, 0, 0, 983027, 0, 0, 983028, 0, 0, 983029, 0, 0, 983030, 0, 0, 983031, 0, 0, 983032, 0, 0, 983033, 2, 0, 983034, 2, 0, 983035, 2, 0, 983036, 2, 0, 983037, 2, 0, 983038, 2, 0, 983039, 2, 0, 917504, 2, 0, 917505, 0, 0, 917506, 0, 0, 917507, 0, 0, 917508, 0, 0, 917509, 0, 0, 917510, 0, 0, 917511, 0, 0, 917512, 0, 0, 917513, 0, 0, 917514, 0, 0, 917515, 0, 0, 917516, 0, 65536, 917517, 0, 65537, 917518, 0, 65538, 917519, 0, 65537, 917520, 0, 0, 917521, 0, 65538, 917522, 0, 1, 917523, 0, 65538, 917524, 0, 65537, 917525, 0, 2, 917526, 0, 65537, 917527, 0, 2, 917528, 0, 2, 917529, 0, 0, 917530, 2, 0, 1048553, 2, 0, 1048554, 0, 0, 1048555, 0, 0, 1048556, 0, 0, 1048557, 0, 0, 1048558, 0, 0, 1048559, 0, 0, 1048560, 0, 0, 1048561, 0, 0, 1048562, 0, 0, 1048563, 0, 0, 1048564, 0, 0, 1048565, 0, 0, 1048566, 0, 0, 1048567, 0, 0, 1048568, 0, 0, 1048569, 0, 0, 1048570, 0, 0, 1048571, 0, 0, 1048572, 0, 0, 1048573, 0, 0, 1048574, 0, 0, 1048575, 0, 0, 983040, 0, 0, 983041, 0, 0, 983042, 0, 0, 983043, 0, 0, 983044, 0, 0, 983045, 0, 0, 983046, 0, 0, 983047, 0, 0, 983048, 0, 0, 983049, 0, 0, 983050, 0, 0, 983051, 0, 0, 983052, 0, 0, 983053, 0, 0, 983054, 0, 0, 983055, 0, 0, 983056, 0, 0, 983057, 0, 0, 983058, 0, 0, 983059, 0, 0, 983060, 0, 0, 983061, 0, 0, 983062, 0, 0, 983063, 0, 0, 983064, 0, 0, 983065, 0, 0, 983066, 2, 0, 1114089, 2, 0, 1114090, 2, 0, 1114091, 2, 0, 1114092, 2, 0, 1114093, 2, 0, 1114094, 2, 0, 1114095, 2, 0, 1114096, 2, 0, 1114097, 2, 0, 1114098, 2, 0, 1114099, 2, 0, 1114100, 2, 0, 1114101, 2, 0, 1114102, 2, 0, 1114103, 2, 0, 1114104, 2, 0, 1114105, 2, 0, 1114106, 2, 0, 1114107, 2, 0, 1114108, 2, 0, 1114109, 2, 0, 1114110, 2, 0, 1114111, 2, 0, 1048576, 2, 0, 1048577, 2, 0, 1048578, 2, 0, 1048579, 2, 0, 1048580, 2, 0, 1048581, 2, 0, 1048582, 2, 0, 1048583, 2, 0, 1048584, 2, 0, 1048585, 2, 0, 1048586, 2, 0, 1048587, 2, 0, 1048588, 2, 0, 1048589, 2, 0, 1048590, 2, 0, 1048591, 2, 0, 1048592, 2, 0, 1048593, 2, 0, 1048594, 2, 0, 1048595, 2, 0, 1048596, 2, 0, 1048597, 2, 0, 1048598, 2, 0, 1048599, 2, 0, 1048600, 2, 0, 1048601, 2, 0, 1048602, 2, 0 )

[node name="YSort" type="YSort" parent="."]

[node name="Player" parent="YSort" instance=ExtResource( 3 )]
position = Vector2( 11.6978, 75.2664 )

[node name="Pillar" parent="YSort" instance=ExtResource( 2 )]
position = Vector2( -50, 25 )

[node name="Pillar2" parent="YSort" instance=ExtResource( 2 )]
position = Vector2( -50, -25 )

[node name="Pillar4" parent="YSort" instance=ExtResource( 2 )]
position = Vector2( 50, 25 )

[node name="Pillar3" parent="YSort" instance=ExtResource( 2 )]
position = Vector2( 50, -25 )

[node name="Boss1" parent="YSort" instance=ExtResource( 5 )]

[node name="Camera2D" parent="." instance=ExtResource( 4 )]
position = Vector2( -1.97455, 6.46616 )
zoom = Vector2( 0.3, 0.3 )

[node name="SpawnPoints" type="Node" parent="."]

[node name="Spawn" type="Node2D" parent="SpawnPoints"]
position = Vector2( -112.801, -47.5651 )

[node name="Spawn2" type="Node2D" parent="SpawnPoints"]
position = Vector2( 110.993, -48.2786 )

[node name="Spawn3" type="Node2D" parent="SpawnPoints"]
position = Vector2( 111.231, 65.1643 )

[node name="Spawn4" type="Node2D" parent="SpawnPoints"]
position = Vector2( -96.6286, 63.2616 )

[node name="Spawn5" type="Node2D" parent="SpawnPoints"]
position = Vector2( 1.83127, 63.9751 )

[node name="Spawn6" type="Node2D" parent="SpawnPoints"]
position = Vector2( -1.26047, -46.6138 )

[node name="Spawn Timer" type="Timer" parent="."]
wait_time = 10.0
autostart = true
[connection signal="timeout" from="Spawn Timer" to="." method="_on_Spawn_Timer_timeout"]
